# BoWWServer_x86

./: CMakeLists.txt  README.md  clients.yaml  setup_env.sh
include/: AlsaSinkManager.h  BoWWServer.h  BoWWServerDefs.h  ClientSession.h  ConfigManager.h  GroupController.h  MDNSService.h  SimpleAGC.h  WavWriter.h  feature_extract.h  tf_dsp_weights.h  tflite_runner.h
models/: README.md  crnn_state  hey_jarvis_f32.tflite  hey_jarvis_f32_labels.txt  hey_jarvis_int8.tflite
src/: AlsaSinkManager.cpp  BoWWServer.cpp  ClientSession.cpp  ConfigManager.cpp  GroupController.cpp  MDNSService.cpp  WavWriter.cpp  feature_extract.cpp  main.cpp  tflite_runner.cpp
